Add /player/stream API endpoint
